--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<a class="header__logo" href="index.html"><picture><source srcset="img/logo.webp" type="image/webp"><img src="img/logo.png" alt="Nebula logo"></picture></a>
 					<nav class="header__menu menu">
 						<ul class="menu__items">
-							<li class="menu__item"><a href="index.html">About Us</a></li>
+							<li class="menu__item"><a href="index.html">Yash</a></li>
 							<li class="menu__item"><a href="careers.html">Careers</a></li>
 							<li class="menu__item"><a href="contacts.html">Contacts</a></li>
 							<li class="menu__item"><a href="form.html">Internship</a></li>
