Change In Index Page Nav Bar

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 						<div class="welcome__content media-block media-block_animated">
 							<div class="media-block__row">
-								<div class="media-block__text text_grey _text-anim-origin">Software</div>
+								<div class="media-block__text text_grey _text-anim-origin">Yash</div>
 								<div class="media-block__text text_grey _animate-appear media-block__animate-text media-block__animate-text_r-l">
 									Software</div>
 								<div class="media-block__media _animate-appear _img-anim-hidden">
