Change In Index Page Nav Bar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<a class="header__logo" href="index.html"><picture><source srcset="img/logo.webp" type="image/webp"><img src="img/logo.png" alt="Nebula logo"></picture></a>
 					<nav class="header__menu menu">
 						<ul class="menu__items">
-							<li class="menu__item"><a href="index.html">Yash</a></li>
+							<li class="menu__item"><a href="index.html">About Us</a></li>
 							<li class="menu__item"><a href="careers.html">Careers</a></li>
 							<li class="menu__item"><a href="contacts.html">Contacts</a></li>
 							<li class="menu__item"><a href="form.html">Internship</a></li>
@@ -46,7 +46,7 @@
 
 						<div class="welcome__content media-block media-block_animated">
 							<div class="media-block__row">
-								<div class="media-block__text text_grey _text-anim-origin">Yash</div>
+								<div class="media-block__text text_grey _text-anim-origin">Software</div>
 								<div class="media-block__text text_grey _animate-appear media-block__animate-text media-block__animate-text_r-l">
 									Software</div>
 								<div class="media-block__media _animate-appear _img-anim-hidden">
