Change In Index File

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<!-- //=== welcome = section ================================================================================================== -->
 					<section class="welcome">
 						<div id="preload-text-position-holder" class="welcome__title"><span class="text_thin">welcome to
-							</span><span class="text-accent_violet">Nebula </span>Development</div>
+							</span><span class="text-accent_violet">Siddz </span>Development</div>
 						<div id="preload-text-original" class="welcome__title"><span class="text_thin">welcome to </span><span class="text-accent_violet">Nebula </span>Development</div>
 
 						<div class="welcome__content media-block media-block_animated">
